--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
         </div>
         <div class="tel">
-            <p>© 2022 Yu, Tae-Yang. All Rights Reserved.</p>
+            <p>© 2022 Yu Tae-Yang. All Rights Reserved.</p>
         </div>
     </header>
     <section class="cover" id="cover">
@@ -120,6 +120,38 @@
             </div>
         </div>
     </section>
+    <section class="contact" id="Contact">
+        <p class="port-text"><b>CONTACT ME</b></p>
+        <p class="end-text">포트 폴리오 끝까지 봐주셔서 감사합니다</p>
+        <div class="info-con">
+            <div class="location-box">
+                <i class="fa-solid fa-location-dot location"></i>
+                <p class="location-main-text"> <b>Location</b></p>
+            </div>
+            <p class="location-sub-text">포항시 북구</p>
+            <div class="email-box">
+                <i class="fa-solid fa-envelope email"></i>
+                <p class="email-main-text"> <b>Email</b></p>
+            </div>
+            <p class="email-sub-text">yutaeyang2234@gmail.com</p>
+            <div class="call-box">
+                <i class="fa-solid fa-phone call"></i>
+                <p class="call-main-text"> <b>Tel</b></p>
+            </div>
+            <p class="call-sub-text">010-7935-2234</p>
+            <div class="github-box">
+                <i class="fa-brands fa-github github"></i>
+                <p class="github-main-text"> <b>Github</b></p>
+            </div>
+            <a class="github-sub-text" href="https://github.com/cumedang">https://github.com/cumedang</a>
+        </div>
+        </div>
+        </div>
+    </section>
+    <footer>
+        <a href="https://www.flaticon.com/kr/free-icons/-t" title="편지 t 아이콘">편지 t 아이콘  제작자: Md Tanvirul Haque - Flaticon</a>
+        <p class="footer-text">나머지 아이콘은 폰트어썸에 무료 아이콘을 사용하였습니다</p>
+    </footer>
 </html>
 <script src="js.js"></script>
 <script src="scroll.js"></script>
