진짜 최종 수정

--- a/index.html
+++ b/index.html
@@ -63,19 +63,21 @@
     </section>
     <section class="about-se" id="about">
         <b><p class="about-text">About me</p></b>
-        <img src="aboutme.jpg" alt="내사진" class="aboutme">
-        <div class="about-title">
-            <p class="main-title"><b>Back-end Developer</b></p>
-            <div class="gac">
-                <p >어떤일이 있어도 포기하지않는 끈기 있는 개발자</p><br>
-                <p >계속해서 끊임없이 노력하는 개발자</p>
-                <p>설싱히 노력하는 개발자가 되겠습니다</p><br>
-            </div>
-            <div class="info">
-                <i class="fa-solid fa-angle-right ch"></i><a><b>Full Name </b>: 유태양</a><br><br>
-                <i class="fa-solid fa-angle-right ch"></i><a><b>Phone </b>: 010 7935 2234</a><br><br>
-                <i class="fa-solid fa-angle-right ch"></i><a><b>Email </b>: yutaeyang2234@gmail.com</a><br><br>
-                <i class="fa-solid fa-angle-right ch"></i><a><b>Adress </b>: 포항시 북구</a>
+        <div class="about_con">
+            <img src="aboutme.jpg" alt="내사진" class="aboutme">
+            <div class="about-title">
+                <p class="main-title"><b>Back-end Developer</b></p>
+                <div class="gac">
+                    <p >어떤일이 있어도 포기하지않는 끈기 있는 개발자</p><br>
+                    <p >계속해서 끊임없이 노력하는 개발자</p>
+                    <p>설싱히 노력하는 개발자가 되겠습니다</p><br>
+                </div>
+                <div class="info">
+                    <i class="fa-solid fa-angle-right ch"></i><a><b>Full Name </b>: 유태양</a><br><br>
+                    <i class="fa-solid fa-angle-right ch"></i><a><b>Phone </b>: 010 7935 2234</a><br><br>
+                    <i class="fa-solid fa-angle-right ch"></i><a><b>Email </b>: yutaeyang2234@gmail.com</a><br><br>
+                    <i class="fa-solid fa-angle-right ch"></i><a><b>Adress </b>: 포항시 북구</a>
+                </div>
             </div>
         </div>
     </section>
