진짜 마지막 수정임 더이상 수정 안할꺼임 ㄹㅇ루다가 쿠쿠루 ㄹㅇ

--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
         </div>
     </section>
     <footer>
-        <a href="https://www.flaticon.com/kr/free-icons/-t" title="편지 t 아이콘">편지 t 아이콘  제작자: Md Tanvirul Haque - Flaticon</a>
-        <p class="footer-text">나머지 아이콘은 폰트어썸에 무료 아이콘을 사용하였습니다</p>
+        <div class="f-text">
+            <a href="https://www.flaticon.com/kr/free-icons/-t" title="편지 t 아이콘">편지 t 아이콘  제작자: Md Tanvirul Haque - Flaticon</a>
+            <p class="footer-text">나머지 아이콘은 폰트어썸에 무료 아이콘을 사용하였습니다</p>
+        </div>
     </footer>
 </html>
 <script src="js.js"></script>
