이게 왜 안되는걸까요?

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -19,11 +19,11 @@
             </div>
             <a href="index.html" class="header-name">Yu Tae Yang</a>
             <div class="con-icon">
-                <a href="#"><i class="fa-brands fa-twitter t" title="트위터 바로가기"></i></a>
-                <a href="https://github.com/cumedang"><i class="fa-brands fa-github f" title="깃허브 바로가기"></i></a>
-                <a href="https://www.instagram.com/yusun2234/"><i class="fa-brands fa-instagram i" title="인스타그램 바로가기"></i></a>
-                <a href="https://discord.gg/RhnJ7jVNAg"><i class="fa-brands fa-discord s" title="디스코드 바로가기"></i></a>
-                <a href="https://yusun2234.notion.site/Go-62ddf4cc74a04e4ebd215d59f29ff5f0"><i class="fa-regular fa-address-book in" title="노션 바로가기"></i></a>
+                <a href="#" title="트위터 바로가기"><i class="fa-brands fa-twitter t" ></i></a>
+                <a href="https://github.com/cumedang" title="깃허브 바로가기"><i class="fa-brands fa-github f" ></i></a>
+                <a href="https://www.instagram.com/yusun2234/" title="인스타그램 바로가기"><i class="fa-brands fa-instagram i" ></i></a>
+                <a href="https://discord.gg/RhnJ7jVNAg" title="디스코드 바로가기"><i class="fa-brands fa-discord s" ></i></a>
+                <a href="https://yusun2234.notion.site/Go-62ddf4cc74a04e4ebd215d59f29ff5f0" title="노션 바로가기"><i class="fa-regular fa-address-book in" ></i></a>
             </div>
         </div><br><br>
     <div class="menu">
