--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="https://github.com/cumedang" title="깃허브 바로가기"><i class="fa-brands fa-github f" ></i></a>
                 <a href="https://www.instagram.com/yusun2234/" title="인스타그램 바로가기"><i class="fa-brands fa-instagram i" ></i></a>
                 <a href="https://discord.gg/RhnJ7jVNAg" title="디스코드 바로가기"><i class="fa-brands fa-discord s" ></i></a>
-                <a href="https://yusun2234.notion.site/Go-62ddf4cc74a04e4ebd215d59f29ff5f0" title="노션 바로가기"><i class="fa-regular fa-address-book in" ></i></a>
+                <a href="https://www.notion.so/yusun2234/3385c6cdbc7342b29932647d26ad439d" title="노션 바로가기"><i class="fa-regular fa-address-book in" ></i></a>
             </div>
         </div><br><br>
     <div class="menu">
