--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </div>
             <a href="index.html" class="header-name">Yu Tae Yang</a>
             <div class="con-icon">
-                <a href="#" title="트위터 바로가기"><i class="fa-brands fa-twitter t" ></i></a>
-                <a href="https://github.com/cumedang" title="깃허브 바로가기"><i class="fa-brands fa-github f" ></i></a>
-                <a href="https://www.instagram.com/yusun2234/" title="인스타그램 바로가기"><i class="fa-brands fa-instagram i" ></i></a>
-                <a href="https://discord.gg/RhnJ7jVNAg" title="디스코드 바로가기"><i class="fa-brands fa-discord s" ></i></a>
-                <a href="https://www.notion.so/yusun2234/3385c6cdbc7342b29932647d26ad439d" title="노션 바로가기"><i class="fa-regular fa-address-book in" ></i></a>
+                <a href="#"><i class="fa-brands fa-twitter t"></i></a>
+                <a href="https://github.com/cumedang"><i class="fa-brands fa-github f"></i></a>
+                <a href="https://www.instagram.com/yusun2234/"><i class="fa-brands fa-instagram i"></i></a>
+                <a href="https://discord.gg/RhnJ7jVNAg"><i class="fa-brands fa-discord s"></i></a>
+                <a href="https://yusun2234.notion.site/Go-62ddf4cc74a04e4ebd215d59f29ff5f0"><i class="fa-regular fa-address-book in"></i></a>
             </div>
         </div><br><br>
     <div class="menu">
@@ -84,7 +84,7 @@
     <div class="resume" id="resume">
             <p class="re-text"><b>Certificate</b></p>
             <p class="hac"><b>자격증</b></p><br>
-            <i class="fa-solid fa-angle-right h1"></i><cite class="it1">정보 처리 기능사</cite>
+            <i class="fa-solid fa-angle-right h1"></i><cite class="it1">정보처리기능사 실기</cite>
             <i class="fa-solid fa-angle-right h"></i><cite class="it">국가공인 한자 자격증 3급</cite>
             <p class="resume-text"><b>Resume</b></p>
             <p class="ed"><b>흥해 남산 초등학교 졸업</b></p><br>
@@ -92,27 +92,17 @@
             <p class="ed"><b>흥해 중학교 졸업</b></p><br>
             <i class="fa-solid fa-angle-right c"></i><cite class="site">첫 back-end 언어 자바 시작</cite>
             <br><br>
-            <p class="ed"><b>경북 소프트웨어 고등학교 재학중</b></p><br>
+            <p class="ed"><b>경북 소프트웨어 고등학교 줄업</b></p><br>
             <i class="fa-solid fa-angle-right c"></i><cite class="site">현재 PHP,Go,Java등 다양한 back-end언어 배우는중</cite>
     </div>
     <section class="portfoilo" id="Portfolio">
         <p class="port-text"><b>Portfolio</b></p>
-        <div class="ject">
-            <a href="http://xn--og5bn2av0r.com/front/index.php">
-                <div class="port-cont" title="자가진단 사이트로 이동">
-                    <p class="port-title-text"><b>자가진단</b></p>
-                    <img src="port.png" alt="프젝1" class="pc1">
-                    <p class="con-text">제가 개인적으로 친구들과 자가진단이<br>가능하도록 만든 프로젝트로<br>백엔드를 100%를 담당했습니다</p>
-                </div>
-            </a>
-            <a href="http://xn--og5bn2av0r.com/Alea/index.php">
-                <div class="port1-cont" title="도박예방 사이트로 이동">
-                    <p class="port-title-text"><b>도박예방사이트</b></p>
-                    <img src="port1.png" alt="프젝1" class="pc2">
-                    <p class="con-text">제가 학교 해커톤시간에 도박 방지 목적으로 만든 프로젝트로<br>백엔드를 100%와 프론트900%를 담당하였습니다</p>
-                </div>
-            </a>
-        </div>
+        <a href="http://xn--og5bn2av0r.com/front/index.php">
+            <div class="port-cont">
+                <img src="port.png" alt="프젝1" class="pc1">
+                <p class="con-text">제가 친구들과 처음 참여한 프로젝트로<br>백엔드를 100%를 담당했습니다</p>
+            </div>
+        </a>
     </section>
     <section class="skill" id="Skill">
         <p class="port-text"><b>Skill</b></p>
