--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
                     <p class="con-text">제가 학교 해커톤시간에 도박 방지 목적으로 만든 프로젝트로<br>백엔드를 100%와 프론트900%를 담당하였습니다</p>
                 </div>
             </a>
+            <a href="https://uistagram.gbsw.hs.kr/" class="pc3-con">
+                <div class="port1-cont" title="의스타 그램으로로 이동">
+                    <p class="port-title-text"><b>의스타 그램</b></p>
+                    <img src="port2.png" alt="프젝1" class="pc3">
+                    <p class="con-text">제가 팀장으로 진행된 캡스톤 프로젝트로<br>여행코스 부분을 디자인 및 기능 구현을 했습니다</p>
+                </div>
+            </a>
         </div>
     </section>
     <section class="skill" id="Skill">
